--- a/index_univ.html
+++ b/index_univ.html
@@ -340,6 +340,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCdS06.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPCdS06.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -355,6 +356,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCdS07.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPCdS07.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -370,6 +372,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCbM10.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPCbM10.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -386,6 +389,7 @@
                     <td>
                         <a href="./pc/UI_ADHPCcM02-1.html" target="_blank">PC-1</a>
                         <a href="./pc/UI_ADHPCcM02-2.html" target="_blank">PC-2</a>
+                        <a href="./mobile/UI_ADHPCcM02.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -401,6 +405,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCeM01.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPCeM01.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -416,6 +421,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCeS02.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPCeS02.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
