--- a/mobile/UI_ADHPCdS07.html
+++ b/mobile/UI_ADHPCdS07.html
@@ -2,7 +2,7 @@
 <html lang="ko">
     <head>
         <meta charset="UTF-8">
-        <title>빌드업 - 경력개발로드맵_조회(제출후)</title>
+        <title>빌드업_경력개발로드맵_조회(변경신청후-회수)빌드업_경력개발로드맵_조회(변경신청후-회수)</title>
         <script src="../mobile/include/js/head.js"></script>
         <script src="../mobile/include/js/mobile-ui-util.js"></script>
         <script src="../mobile/include/js/mobile-ui.js"></script>
@@ -65,6 +65,10 @@
                                     <div>
                                         <div class="dt">전공/학과</div>
                                         <div class="dd">선택전공 / 선택학과</div>
+                                    </div>
+                                    <div>
+                                        <div class="dt">학번</div>
+                                        <div class="dd">20250000</div>
                                     </div>
                                     <div>
                                         <div class="dt">학적 상태</div>
