--- a/pc/UI_ADHPCeS02.html
+++ b/pc/UI_ADHPCeS02.html
@@ -62,7 +62,7 @@
                                         </ul>
 
                                         <ul class="job_step_wrap mt24">
-                                            <li class="active"><span>1. 취업목표설정 검사</span></li>
+                                            <li class="active" aria-current="step"><span>1. 취업목표설정 검사</span></li>
                                             <li class="connect"><span>2. 취업정보 탐색 검사</span></li>
                                             <li class="connect"><span>3. 취업기술 습득 검사</span></li>
                                             <li class="connect"><span>4. 취업경력 준비 검사</span></li>
