--- a/mobile/UI_ADHPCbM09.html
+++ b/mobile/UI_ADHPCbM09.html
@@ -25,9 +25,9 @@
                     <div class="progmg allcare">
                         <div class="tab_menu custom_split" data-target="tabContentsId1">
                             <ul>
-                                <li class="on"><button type="button" onclick="">참여신청서</button></li>
-                                <li><button type="button" onclick="">상담 이력</button></li>
-                                <li><button type="button" onclick="">경력개발로드맵</button></li>
+                                <li class="on"><button type="button" aria-selected="true">참여신청서</button></li>
+                                <li><button type="button" aria-selected="false">상담이력</button></li>
+                                <li><button type="button" aria-selected="false">경력개발로드맵</button></li>
                             </ul>
                         </div>
 
@@ -126,16 +126,16 @@
                                             <fieldset class="radio_filed">
                                                 <legend class="sr_only">참여자 유형 선택</legend>
                                                 <div class="new_radio_item">
-                                                    <input type="radio" id="빌드업프로젝트1" name="빌드업프로젝트" checked disabled>
-                                                    <label for="빌드업프로젝트1" class="custom_radio">
+                                                    <input type="radio" id="빌드업프로젝트" name="참여자유형선택" checked disabled>
+                                                    <label for="빌드업프로젝트" class="custom_radio">
                                                         <span class="sr_only">선택지 1:</span>
                                                         <span class="label_title">빌드업 프로젝트</span>
                                                         <span class="label_text">※ 저학년 청년을 중심으로 심층상담 기반 개인별 중·장기 희망 직업 포트폴리오 설계 및 진로탐색, 기초역량 강화 지원</span>
                                                     </label>
                                                 </div>
                                                 <div class="new_radio_item">
-                                                    <input type="radio" id="빌드업프로젝트2" name="빌드업프로젝트" disabled>
-                                                    <label for="빌드업프로젝트2" class="custom_radio">
+                                                    <input type="radio" id="점프업프로젝트" name="참여자유형선택" disabled>
+                                                    <label for="점프업프로젝트" class="custom_radio">
                                                         <span class="sr_only">선택지 2:</span>
                                                         <span class="label_title">점프업 프로젝트</span>
                                                         <span class="label_text">※ 고학년 청년을 중심으로 심층상담 기반 개인별 취업활동계획 설계 및 맞춤형 직업훈련·일경험 참여 지원</span>
