--- a/index_univ.html
+++ b/index_univ.html
@@ -437,6 +437,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCeS03.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPCeS03.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
