--- a/index_univ.html
+++ b/index_univ.html
@@ -724,11 +724,11 @@
                     <td>참여신청서</td>
                     <td>포인트신청관리(점프업)</td>
                     <td>구직활동팝업</td>
-                    <td>UI_ADHPChS03</td>
+                    <td>UI_ADHPChP03</td>
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="./pc/UI_ADHPChS03.html" target="_blank" class="none">PC</a>
+                        <a href="./pc/UI_ADHPChP03.html" target="_blank" class="none">PC</a>
                     </td>
                 </tr>
                 <tr>
@@ -739,12 +739,12 @@
                     <td>참여신청서</td>
                     <td>포인트신청관리(점프업)</td>
                     <td>부정수급 방지 확인서</td>
-                    <td>UI_ADHPChS04</td>
+                    <td>UI_ADHPChP04</td>
                     <td class="status">완료</td>
                     <td></td>
                     <td>
-                        <a href="./pc/UI_ADHPChS04.html" target="_blank">PC</a>
-                        <a href="./mobile/UI_ADHPChS04.html" target="_blank">Mo</a>
+                        <a href="./pc/UI_ADHPChP04.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPChP04.html" target="_blank">Mo</a>
                     </td>
                 </tr>
                 <tr>
