--- a/index_univ.html
+++ b/index_univ.html
@@ -728,7 +728,7 @@
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="./pc/UI_ADHPChP03.html" target="_blank" class="none">PC</a>
+                        <a href="./pc/UI_ADHPChP03.html" target="_blank">PC</a>
                     </td>
                 </tr>
                 <tr>
