--- a/index_univ.html
+++ b/index_univ.html
@@ -91,7 +91,7 @@
                     <td></td>
                     <td>참여신청서 - 목록 없음</td>
                     <td>UI_ADHPCbM01</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCbM01.html" target="_blank">PC</a>
@@ -107,7 +107,7 @@
                     <td></td>
                     <td>참여신청서 - 목록 있음</td>
                     <td>UI_ADHPCbM02</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCbM02.html" target="_blank">PC</a>
@@ -123,7 +123,7 @@
                     <td></td>z
                     <td>참여신청서 - 이전정보 팝업</td>
                     <td>UI_ADHPCbP03</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCbP03.html" target="_blank">PC</a>
@@ -139,7 +139,7 @@
                     <td></td>
                     <td>참여신청서 - 등록</td>
                     <td>UI_ADHPCbS04</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCbS04-1.html" target="_blank">PC-1</a>
@@ -157,7 +157,7 @@
                     <td></td>
                     <td>참여 신청서 - 등록 제출완료</td>
                     <td>UI_ADHPCbS05</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCbS05.html" target="_blank">PC</a>
@@ -173,7 +173,7 @@
                     <td></td>
                     <td>참여신청서 - 조회_제출</td>
                     <td>UI_ADHPCbS06</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCbS06.html" target="_blank">PC</a>
@@ -189,7 +189,7 @@
                     <td></td>
                     <td>참여신청서 - 조회_불인정</td>
                     <td>UI_ADHPCbS07</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCbS07.html" target="_blank">PC</a>
@@ -205,7 +205,7 @@
                     <td></td>
                     <td>참여신청서 - 회수_수정</td>
                     <td>UI_ADHPCbS08</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCbS08.html" target="_blank">PC</a>
@@ -221,7 +221,7 @@
                     <td>참여신청서(빌드업)</td>
                     <td>빌드업 - 참여신청서 조회</td>
                     <td>UI_ADHPCbM09</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCbM09.html" target="_blank">PC</a>
@@ -237,7 +237,7 @@
                     <td>상담이력(빌드업)</td>
                     <td>빌드업 - 상담이력_목록</td>
                     <td>UI_ADHPCcM01</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>                   
                         <a href="./pc/UI_ADHPCcM01-1.html" target="_blank">PC-1</a>
@@ -254,7 +254,7 @@
                     <td>경력개발로드맵(빌드업)</td>
                     <td>빌드업 - 경력개발로드맵_목록</td>
                     <td>UI_ADHPCdM01</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCdM01-1.html" target="_blank">PC-1</a>
@@ -271,7 +271,7 @@
                     <td>경력개발로드맵(빌드업)</td>
                     <td>빌드업 - 경력개발로드맵_등록</td>
                     <td>UI_ADHPCdS02</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCdS02.html" target="_blank">PC</a>
@@ -287,7 +287,7 @@
                     <td>경력개발로드맵(빌드업)</td>
                     <td>빌드업 - 경력개발로드맵_수정</td>
                     <td>UI_ADHPCdS03</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCdS03.html" target="_blank">PC</a>
@@ -304,7 +304,7 @@
                     <td>경력개발로드맵(빌드업)</td>
                     <td>빌드업 - 경력개발로드맵_조회(제출후)</td>
                     <td>UI_ADHPCdS04</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCdS04.html" target="_blank">PC</a>
@@ -320,7 +320,7 @@
                     <td>경력개발로드맵(빌드업)</td>
                     <td>빌드업 - 경력개발로드맵_수정(제출후_보완요청)</td>
                     <td>UI_ADHPCdS05</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCdS05.html" target="_blank">PC</a>
@@ -336,7 +336,7 @@
                     <td>경력개발로드맵(빌드업)</td>
                     <td>빌드업 - 경력개발로드맵_수정(제출승인후-변경신청)</td>
                     <td>UI_ADHPCdS06</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCdS06.html" target="_blank">PC</a>
@@ -352,7 +352,7 @@
                     <td>경력개발로드맵(빌드업)</td>
                     <td>빌드업 - 경력개발로드맵_조회(변경신청후-회수)</td>
                     <td>UI_ADHPCdS07</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCdS07.html" target="_blank">PC</a>
@@ -368,7 +368,7 @@
                     <td>참여신청서(점프업)</td>
                     <td>점프업 - 참여신청서조회</td>
                     <td>UI_ADHPCbM10</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCbM10.html" target="_blank">PC</a>
@@ -384,7 +384,7 @@
                     <td>상담이력(점프업)</td>
                     <td>점프업 - 상담이력_목록</td>
                     <td>UI_ADHPCcM02</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCcM02-1.html" target="_blank">PC-1</a>
@@ -401,7 +401,7 @@
                     <td>취업준비도검사(점프업)</td>
                     <td>점프업 - 취업준비도검사_목록</td>
                     <td>UI_ADHPCeM01</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCeM01.html" target="_blank">PC</a>
@@ -417,7 +417,7 @@
                     <td>취업준비도검사(점프업)</td>
                     <td>점프업 - 취업준비도검사_ST1</td>
                     <td>UI_ADHPCeS02</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCeS02.html" target="_blank">PC</a>
@@ -433,7 +433,7 @@
                     <td>취업준비도검사(점프업)</td>
                     <td>점프업 - 취업준비도검사_ST2</td>
                     <td>UI_ADHPCeS03</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCeS03.html" target="_blank">PC</a>
@@ -449,10 +449,11 @@
                     <td>취업준비도검사(점프업)</td>
                     <td>점프업 - 취업준비도검사_ST3</td>
                     <td>UI_ADHPCeS04</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCeS04.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPCeS04.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -464,10 +465,11 @@
                     <td>취업준비도검사(점프업)</td>
                     <td>점프업 - 취업준비도검사_ST4</td>
                     <td>UI_ADHPCeS05</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCeS05.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPCeS05.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -479,10 +481,11 @@
                     <td>취업준비도검사(점프업)</td>
                     <td>점프업 - 취업준비도검사_ST5</td>
                     <td>UI_ADHPCeS06</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCeS06.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPCeS06.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -498,6 +501,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCeS07.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPCeS07.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -725,10 +729,11 @@
                     <td>포인트신청관리(점프업)</td>
                     <td>구직활동팝업</td>
                     <td>UI_ADHPChP03</td>
-                    <td class="status"></td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPChP03.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPChP03.html" target="_blank">Mo</a>
                     </td>
                 </tr>
                 <tr>
