--- a/mobile/UI_ADHPCeS03.html
+++ b/mobile/UI_ADHPCeS03.html
@@ -70,7 +70,7 @@
                         <section class="prog_apply_sec prog_qna_sec mt16">
                             <h3 class="t2_sb">검사문항</h3>
                             <div class="mt8">
-                                <h4 class="prog_wrap_tit">B. 취업목표 설정</h4>
+                                <h4 class="prog_wrap_tit mb4">B. 취업목표 설정</h4>
                                 <p>자신의 취업목표를 달성하기 위하여 목표 직업(분야)에 대한 다양한 정보(자격요건, 요구되는 능력, 채용방식, 노동시장 구조 등)를 체계적인 방법을 활용하여 깊게 탐색을 수행한 정도</p>
                             </div>
 
@@ -763,6 +763,7 @@
                         <div class="prog_wrap_end mt16">
                             <div class="apply_btn_box mt24">
                                 <button type="button" class="btn type03 large">목록</button>
+                                <button type="button" class="btn type01 large">이전</button>
                                 <button type="button" class="btn type01 fill large">다음</button>
                             </div>
                         </div>
