--- a/index_univ.html
+++ b/index_univ.html
@@ -520,6 +520,11 @@
                         <a href="./pc/UI_ADHPCfM01_2.html" target="_blank">PC-2</a>
                         <a href="./pc/UI_ADHPCfM01_3.html" target="_blank">PC-3</a>
                         <a href="./pc/UI_ADHPCfM01_4.html" target="_blank">PC-4</a>
+                        <br>
+                        <a href="./mobile/UI_ADHPCfM01-1.html" target="_blank">Mo-1</a>
+                        <a href="./mobile/UI_ADHPCfM01-2.html" target="_blank">Mo-2</a>
+                        <a href="./mobile/UI_ADHPCfM01-3.html" target="_blank">Mo-3</a>
+                        <a href="./mobile/UI_ADHPCfM01-4.html" target="_blank">Mo-4</a>
                     </td>
                 </tr>
                 <tr>
