--- a/mobile/UI_ADHPCfM01-3.html
+++ b/mobile/UI_ADHPCfM01-3.html
@@ -120,6 +120,10 @@
                         </div>
                         <button type="button" class="btn large fill type01 ">취업지원유형 변경등록</button>
                     </div>
+
+                    <script>
+
+                    </script>
                 </div>
             </div>
             <!-- 본문 내용 -->
